Narno published a site update

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Page not found - </title>
+    <title>Page not found - Test</title>
     <meta name="description" content="">
     <meta name="author" content="Cecil">
     <style>
