--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
       <main>
-        <h1>test</h1>
+        <h1>Test</h1>
+<p>This is a test! :-)</p>
       </main>
     <hr>
     <p>Powered by <a href="https://cecil.app/#5.29.1">Cecil</a></p>
