--- a/index.html
+++ b/index.html
@@ -12,9 +12,126 @@
   </head>
   <body>
       <main>
-        <h1>Lorem ipsum</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
+<p><a href="./another-page.html">Link to another page</a>.</p>
+<p>There should be whitespace between paragraphs.</p>
+<p>There should be whitespace between paragraphs. We recommend including a README, or a file with information about your project.</p>
+<h1>Header 1</h1>
+<p>This is a normal paragraph following a header. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
+<h2>Header 2</h2>
+<blockquote>
+<p>This is a blockquote following a header.</p>
+<p>When something is important enough, you do it even if the odds are not in your favor.</p>
+</blockquote>
+<h3>Header 3</h3>
+<pre><code class="language-js">// Javascript code with syntax highlighting.
+var fun = function lang(l) {
+  dateformat.i18n = require('./lang/' + l)
+  return true;
+}</code></pre>
+<pre><code class="language-ruby"># Ruby code with syntax highlighting
+GitHubPages::Dependencies.gems.each do |gem, version|
+  s.add_dependency(gem, "= #{version}")
+end</code></pre>
+<h4>Header 4</h4>
+<ul>
+<li>This is an unordered list following a header.</li>
+<li>This is an unordered list following a header.</li>
+<li>This is an unordered list following a header.</li>
+</ul>
+<h5>Header 5</h5>
+<ol>
+<li>This is an ordered list following a header.</li>
+<li>This is an ordered list following a header.</li>
+<li>This is an ordered list following a header.</li>
+</ol>
+<h6>Header 6</h6>
+<table>
+<thead>
+<tr>
+<th style="text-align: left;">head1</th>
+<th style="text-align: left;">head two</th>
+<th style="text-align: left;">three</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align: left;">ok</td>
+<td style="text-align: left;">good swedish fish</td>
+<td style="text-align: left;">nice</td>
+</tr>
+<tr>
+<td style="text-align: left;">out of stock</td>
+<td style="text-align: left;">good and plenty</td>
+<td style="text-align: left;">nice</td>
+</tr>
+<tr>
+<td style="text-align: left;">ok</td>
+<td style="text-align: left;">good <code>oreos</code></td>
+<td style="text-align: left;">hmm</td>
+</tr>
+<tr>
+<td style="text-align: left;">ok</td>
+<td style="text-align: left;">good <code>zoute</code> drop</td>
+<td style="text-align: left;">yumm</td>
+</tr>
+</tbody>
+</table>
+<h3>There's a horizontal rule below this.</h3>
+<hr />
+<h3>Here is an unordered list:</h3>
+<ul>
+<li>Item foo</li>
+<li>Item bar</li>
+<li>Item baz</li>
+<li>Item zip</li>
+</ul>
+<h3>And an ordered list:</h3>
+<ol>
+<li>Item one</li>
+<li>Item two</li>
+<li>Item three</li>
+<li>Item four</li>
+</ol>
+<h3>And a nested list:</h3>
+<ul>
+<li>level 1 item
+<ul>
+<li>level 2 item</li>
+<li>level 2 item</li>
+<li>level 3 item</li>
+<li>level 3 item</li>
+</ul></li>
+<li>level 1 item
+<ul>
+<li>level 2 item</li>
+<li>level 2 item</li>
+<li>level 2 item</li>
+</ul></li>
+<li>level 1 item
+<ul>
+<li>level 2 item</li>
+<li>level 2 item</li>
+</ul></li>
+<li>level 1 item</li>
+</ul>
+<h3>Small image</h3>
+<p><img src="https://github.githubassets.com/images/icons/emoji/octocat.png" alt="Octocat" loading="lazy" /></p>
+<h3>Large image</h3>
+<p><img src="https://guides.github.com/activities/hello-world/branching.png" alt="Branching" loading="lazy" /></p>
+<h3>Definition lists can be used with HTML syntax.</h3>
+<dl>
+<dt>Name</dt>
+<dd>Godzilla</dd>
+<dt>Born</dt>
+<dd>1952</dd>
+<dt>Birthplace</dt>
+<dd>Japan</dd>
+<dt>Color</dt>
+<dd>Green</dd>
+</dl>
+<pre><code>Long, single-line code blocks should not wrap. They should horizontally scroll if they are too long. This line should be long enough to demonstrate this.</code></pre>
+<pre><code>The final element.</code></pre>
       </main>
     <hr>
     <p>Powered by <a href="https://cecil.app/#5.29.1">Cecil</a></p>
