Narno published a site update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
       <main>
         <p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
-<p><a href="./another-page.html">Link to another page</a>.</p>
+<p><a href="./another-page/">Link to another page</a>.</p>
 <p>There should be whitespace between paragraphs.</p>
 <p>There should be whitespace between paragraphs. We recommend including a README, or a file with information about your project.</p>
 <h1>Header 1</h1>
