--- a/another-page/index.html
+++ b/another-page/index.html
@@ -17,7 +17,7 @@
     </header>
     <h2>Welcome to another page</h2>
 <p><em>yay</em></p>
-<p><a href="./">back</a></p>
+<p><a href="../">back</a></p>
     <hr>
     <p>Powered by <a href="https://cecil.app/#5.29.1">Cecil</a></p>
   </body>
