--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ end</code></pre>
           <time>28 May 2020</time>
           <h2>Welcome to another page</h2>
 <p><em>yay</em></p>
-<p><a href="./">back</a></p>
+<p><a href="../">back</a></p>
         </article>
       </main>
     <hr>
