--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
   <body>
       <main>
         <h1>Single GitHub Page demo</h1>
-<p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
-<p>There should be whitespace between paragraphs.</p>
+<blockquote>
+<p>This is repository template who build a Single Page Website from the <code>README.md</code> file, with <a href="https://cecil.app">Cecil</a>, <a href="https://github.com/features/actions">GitHub Actions</a> and <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+</blockquote>
 <h1>Header 1</h1>
 <p>This is a normal paragraph following a header. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
+<p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
+<p>There should be whitespace between paragraphs.</p>
 <h2>Header 2</h2>
 <blockquote>
 <p>This is a blockquote following a header.</p>
