Narno published a site update

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <main>
       <h1 id="single-github-page-demo">Single GitHub Page demo</h1>
 <blockquote>
-<p>This is repository template who build a Single Page Website from the <code>README.md</code> file, with <a href="https://cecil.app">Cecil</a>, <a href="https://github.com/features/actions">GitHub Actions</a> and <a href="https://pages.github.com/">GitHub Pages</a>.</p>
+<p>This is repository template who build a Single Page Website from the <code>README.md</code> file, with <a href="https://cecil.app">Cecil</a>, <a href="https://github.com/features/actions">GitHub Actions</a> and <a href="https://pages.github.com/">GitHub Pages</a>.<br />
+Demo: <a href="https://cecilapp.github.io/Single-GitHub-Page/">https://cecilapp.github.io/Single-GitHub-Page/</a></p>
 </blockquote>
 <h1 id="header-1">Header 1</h1>
 <p>This is a normal paragraph following a header. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
