Narno published a site update

--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 </blockquote>
 <p>Demo: <a href="https://cecilapp.github.io/Single-GitHub-Page/">https://cecilapp.github.io/Single-GitHub-Page/</a></p>
       <article>
-        <h2><a href="/markdown/">markdown</a></h2>
+        <h2><a href="/markdown/">Markdown example</a></h2>
         <time>29 Jun 2021</time>
-        <h1 id="header-1">Header 1</h1>
-<p>This is a normal paragraph following a header. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
+        <p>This is a normal paragraph following a header. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
 <p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
 <p>There should be whitespace between paragraphs.</p>
 <h2 id="header-2">Header 2</h2>
