Narno published a site update

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 <p>This is repository template who build a Single Page Website from the <code>README.md</code> file, with <a href="https://cecil.app">Cecil</a>, <a href="https://github.com/features/actions">GitHub Actions</a> and <a href="https://pages.github.com/">GitHub Pages</a>.  </p>
 </blockquote>
 <p>Demo: <a href="https://cecilapp.github.io/Single-GitHub-Page/">https://cecilapp.github.io/Single-GitHub-Page/</a></p>
+<h2 id="how-to-use">How to use?</h2>
+<ol>
+<li>Fork this repository or click on <a href="https://github.com/Cecilapp/Single-GitHub-Page/generate"><em>Use this template</em></a> button</li>
+<li>Edit <code>Readme.md</code></li>
+<li>Enjoy!</li>
+</ol>
     </main>
 
 
