ArnaudLigny published a site update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <h1 id="single-github-page-demo">Single GitHub Page demo</h1>
 <blockquote>
-<p>This is repository template who build a Single Page Website from the <code>README.md</code> file, with <a href="https://cecil.app">Cecil</a>, <a href="https://github.com/features/actions">GitHub Actions</a> and <a href="https://pages.github.com/">GitHub Pages</a>.  </p>
+<p>This is a repository template who builds a Single Page Website from the <code>README.md</code> file, with <a href="https://cecil.app">Cecil</a>, <a href="https://github.com/features/actions">GitHub Actions</a> and <a href="https://pages.github.com/">GitHub Pages</a>.</p>
 </blockquote>
 <p>Demo: <a href="https://cecilapp.github.io/Single-GitHub-Page/">https://cecilapp.github.io/Single-GitHub-Page/</a></p>
 <h2 id="how-to-use">How to use?</h2>
